--- a/css-position davaleba2/style.css
+++ b/css-position davaleba2/style.css
@@ -7,8 +7,10 @@ body{
     width: 100%;
     height: 311px;
     border: none;
+    position: absolute;
 }
 img{
-    margin-top: 209px;
-    margin-left: 68px;
+   position: relative;
+   left: 68px;
+   top: 209px; 
 }
